<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- 드로어에서 보여주는 메뉴 리스트입니다. -->
    <!-- 모든 아이콘 표시는 구글의 마테리얼 디자인 아이콘을 사용해야 합니다. -->
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/drawer_lectureNotices"
                android:checked="false"
                android:icon="@drawable/ic_announcement_black_24dp"
                android:title="@string/label_lectureNotice" />
        <item
                android:id="@+id/drawer_assignments"
                android:checked="false"
                android:icon="@drawable/ic_assignment_black_24dp"
                android:title="@string/label_homework" />
        <item
                android:id="@+id/drawer_meals"
                android:checked="false"
                android:icon="@drawable/ic_local_dining_black_24dp"
                android:title="@string/label_meals" />
        <item
                android:id="@+id/drawer_setting"
                android:checked="false"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/label_setting" />
        <item
                android:id="@+id/drawer_logout"
                android:checked="false"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/label_logout" />

    </group>
</menu>