<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="org.zeropage.causcheduler.activity.DetailViewFragment.DetailHomeworkActivity">
        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
        <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/homework_item_name"
                        android:text="@string/label_detail_homework_name"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/homework_item_start_time"
                        android:text="@string/label_detail_homework_start_time"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/homework_item_end_time"
                        android:text="@string/label_detail_homework_end_time"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/homework_item_extend_end_time"
                        android:text="@string/label_detail_homework_extend_end_time"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/homework_item_cur_prog_stat"
                        android:text="@string/label_detail_homework_status"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/homework_item_is_open"
                        android:text="@string/label_detail_homework_is_open"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/homework_item_submit_student_num"
                        android:text="@string/label_detail_homework_submit_student_num"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/homework_item_content"
                        android:text="@string/label_detail_homework_content"/>

        </LinearLayout>
</LinearLayout>
